--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -18,4 +18,15 @@ comments: true
   {% include documents-collection.html entries=posts type=entries_layout %}
 </div>
 
+{% if site.comments.provider and page.comments %}
+  {% if jekyll.environment == 'production' %}
+    {% include comments.html %}
+  {% else %}
+    <p>
+      Comments are configured with provider: <strong>{{ site.comments.provider }}</strong>,
+      but are disabled in non-production environments.
+    </p>
+  {% endif %}
+{% endif %}
+
 {% include paginator.html %}
