--- a/_includes/archive-single.html
+++ b/_includes/archive-single.html
@@ -1,7 +1,7 @@
-{% if post.header.teaser %}
-  {% capture teaser %}{{ post.header.teaser }}{% endcapture %}
+{% if post.header.image %}
+  {% capture teaser %}{{ post.header.image }}{% endcapture %}
 {% else %}
-  {% assign teaser = site.teaser %}
+  <!-- {% assign teaser = ""  %}  site.teaser -->
 {% endif %}
 
 {% if post.id %}
@@ -12,9 +12,9 @@
 
 <div class="{{ include.type | default: 'list' }}__item">
   <article class="archive__item" itemscope itemtype="https://schema.org/CreativeWork"{% if post.locale %} lang="{{ post.locale }}"{% endif %}>
-    {% if include.type == "grid" and teaser %}
+    {% if teaser %}
       <div class="archive__item-teaser">
-        <img src="{{ teaser | relative_url }}" alt="">
+        <img class="page__hero-image" src="{{ teaser | relative_url }}" alt="{{ page.title }}">
       </div>
     {% endif %}
     <h2 class="archive__item-title no_toc" itemprop="headline">
