--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -25,7 +25,7 @@
   {%- assign author_twitter = author.twitter | replace: "@", "" -%}
 {%- endif -%}
 
-{%- assign page_large_image = page.header.og_image | default: page.header.overlay_image | default: page.header.image | absolute_url | escape -%}
+{%- assign page_large_image = page.header.og_image | default: page.header.overlay_image | default: page.header.image | relative_url | escape -%}
 {%- assign page_teaser_image = page.header.teaser | default: site.og_image | absolute_url | escape -%}
 {%- assign site_og_image = site.og_image | absolute_url | escape -%}
 
@@ -56,9 +56,9 @@
 {% endif %}
 
 {% if page_large_image %}
-  <meta property="og:image" content="{{ page_large_image | relative_url }}">
+  <meta property="og:image" content="{{ page_large_image }}">
 {% elsif page_teaser_image %}
-  <meta property="og:image" content="{{ page_teaser_image | relative_url}}">
+  <meta property="og:image" content="{{ page_teaser_image }}">
 {% endif %}
 
 {% if site.twitter.username %}
