--- a/_includes/seo.html
+++ b/_includes/seo.html
@@ -56,9 +56,9 @@
 {% endif %}
 
 {% if page_large_image %}
-  <meta property="og:image" content="{{ page_large_image }}">
+  <meta property="og:image" content="{{ 'https://info.rip.ke' | append: page_large_image }}">
 {% elsif page_teaser_image %}
-  <meta property="og:image" content="{{ page_teaser_image }}">
+  <meta property="og:image" content="{{ 'https://info.rip.ke' | append: page_teaser_image }}">
 {% endif %}
 
 {% if site.twitter.username %}
