--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -1,6 +1,9 @@
 ---
 layout: archive
 comments: true
+header:
+    image: /assets/images/rip.jpg
+    image_alt: Practical Help for Difficult Times
 ---
 
 {{ content }}
